alb.tf
# create application load balancer
# terraform aws create application load balancer
resource "aws_lb" "application_load_balancer" {
  name               = "cloudswitch360-jupiter-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = 

  subnet_mapping {
    subnet_id = aws_subnet.cloudswitch360_project_public_subnet-az1a.id # public subnet in az1a
  }

  subnet_mapping {
    subnet_id = aws_subnet.cloudswitch360_project_public_subnet-az1b.id # public subnet in az1b
  }

  enable_deletion_protection = false

  tags = {
    Name = "application_loadbalancer_jupiter"
  }
}

# create target group
# terraform aws create target group
resource "aws_lb_target_group" "alb_target_group" {
  name        = "cloudswitch360-jupiter-tg"
  target_type = "instance"
  port        = "80"
  protocol    = "HTTP"
  vpc_id      = aws_vpc.cloudswitch360_project_vpc.id

  health_check {
    healthy_threshold   = 5
    interval            = 30
    matcher             = "200,301,302"
    path                = "/"
    port                = 80
    protocol            = "HTTP"
    timeout             = 5
    unhealthy_threshold = 2
  }
}

# Register the Jupiter web server with the target group
# resource "aws_lb_target_group_attachment" "jupiter_web_target_group_attachment" {
#   target_group_arn = aws_lb_target_group.alb_target_group.arn
#   target_id        = aws_instance.cloudswitch360_jupiter_web.id
#   port             = 80
# }

# create a listener on port 80 with redirect action
# terraform aws create listener
resource "aws_lb_listener" "alb_http_listener" {
  load_balancer_arn = aws_lb.application_load_balancer.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      host        = "#{host}"
      path        = "/#{path}"
      port        = 443
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

# Create a listener on port 443 with forward action (HTTPS)
resource "aws_lb_listener" "alb_https_listener" {
  load_balancer_arn = aws_lb.application_load_balancer.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.ssl_certificate.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb_target_group.arn
  }
}
